Fix spacing

--- a/mangabox.css
+++ b/mangabox.css
@@ -942,6 +942,12 @@ book-item {
 	align-items: stretch;
 }
 
+.series-title {
+	line-height:16px;
+	margin-bottom:3px;
+	margin-top:3px;
+}
+
 .book-row {
 	padding-bottom: 2px;
 }
